Agrego boton de iniciar, fuente y arreglo un poco las dimensiones. Tambien repare los archivos que se encontraban corruptos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="pacientes">Pacientes</string>
     <string name="terapeutas">Terapeutas</string>
     <string name="avatar_del_usuario">Avatar del usuario.</string>
+    <string name="iniciar">Iniciar</string>
 </resources>
