--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,13 @@
     <string name="difficulty">Difficulty</string>
     <string name="jugar">Jugar</string>
     <string name="tutorial">Tutorial</string>
-    <string name="informacion">Informacion</string>
+    <string name="informacion">Ver Informacion</string>
     <string name="cambiar_perfil">Cambiar perfil</string>
     <string name="informacion_de_desarrollo">Informacion de desarrollo</string>
+    <string name="registrar_usuario">Registrar Usuario</string>
+    <string name="configuracion">Configuracion</string>
+    <string name="dificultad_usuario">Dificultad %s</string>
+    <string name="difficulty_easy">Facil</string>
+    <string name="difficulty_medium">Media</string>
+    <string name="difficulty_hard">Dificil</string>
 </resources>
