--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Juegos Didacticos - Limpieza de Caballo</string>
+    <string name="cedica_logo">Logo de Cedica.</string>
+    <string name="vector_caballo">Imagen en negro del contorno de un caballo.</string>
     <string name="cedica_logo_cut">Logo de Cedica sin su texto de marca.</string>
+    <string name="logo_informatica">Logo de la Universidad de Informatica.</string>
     <string name="background_s">Background de la app. Contiene manchas.</string>
     <string name="pacientes">Pacientes</string>
     <string name="terapeutas">Terapeutas</string>
@@ -20,4 +23,9 @@
     <string name="difficulty_easy">Facil</string>
     <string name="difficulty_medium">Media</string>
     <string name="difficulty_hard">Dificil</string>
+    <string name="about_us_developer">Desarrollo</string>"
+    <string name="about_us_team">Rojas, Agustina Sol; Glorioso Ceretti, Antonio Felix</string>
+    <string name="about_us_colaboration">Colaboracion con"</string>
+    <string name="close_button">Boton de cierre</string>
+
 </resources>
