Ultimos cambios sobre detalles de suciedad y agregada jinete/amazonas.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="value_puntaje_game">0</string>
     <string name="pista_game">Pista</string>
     <string name="imagen_de_un_caballo">Imagen de un caballo</string>
+    <string name="imagen_de_una_jinete">Imagen de una jinete</string>
     <string name="imagen_de_una_mesa">Imagen de una mesa</string>
     <string name="masculino">Masculino</string>
     <string name="femenino">Femenino</string>
