Refactorización de todo el proyecto, toques finales para la ultima version antes de la entrega. Se hace publica la 1.0.0 :3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,46 +1,61 @@
 <resources>
     <string name="app_name">Juegos Didacticos - Limpieza de Caballo</string>
     <string name="cedica_logo">Logo de Cedica.</string>
-    <string name="vector_caballo">Imagen en negro del contorno de un caballo.</string>
+    <string name="horse_vector">Imagen en negro del contorno de un caballo.</string>
     <string name="cedica_logo_cut">Logo de Cedica sin su texto de marca.</string>
-    <string name="logo_informatica">Logo de la Universidad de Informatica.</string>
-    <string name="background_s">Background de la app. Contiene manchas.</string>
-    <string name="pacientes">Pacientes</string>
-    <string name="terapeutas">Terapeutas</string>
-    <string name="avatar_del_usuario">Avatar del usuario.</string>
-    <string name="iniciar">Iniciar</string>
+    <string name="logo_unlp_cs">Logo de la Universidad de Informatica.</string>
+    <string name="background">Background de la app. Contiene manchas.</string>
+    <string name="patients">Pacientes</string>
+    <string name="therapists">Terapeutas</string>
+    <string name="user_avatar">Avatar del usuario.</string>
+    <string name="begin">Iniciar</string>
     <string name="user">User</string>
     <string name="user_name">User Name</string>
-    <string name="difficulty">Difficulty</string>
-    <string name="jugar">Jugar</string>
-    <string name="tutorial">Tutorial</string>
-    <string name="informacion">Ver Informacion</string>
-    <string name="cambiar_perfil">Cambiar perfil</string>
-    <string name="informacion_de_desarrollo">Informacion de desarrollo</string>
-    <string name="registrar_usuario">Registrar Usuario</string>
-    <string name="configuracion">Configuracion</string>
-    <string name="dificultad_usuario">Dificultad %s</string>
+    <string name="difficulty">Dificultad</string>
+    <string name="play">Jugar</string>
+    <string name="information">Ver Informacion</string>
+    <string name="change_profile">Cambiar perfil</string>
+    <string name="development_information">Informacion de desarrollo</string>
+    <string name="register_user">Registrar Usuario</string>
+    <string name="configuration">Configuracion</string>
+    <string name="user_difficulty">Dificultad %s</string>
     <string name="about_us_developer">Desarrollo</string>"
     <string name="about_us_team">Rojas, Agustina Sol; Glorioso Ceretti, Antonio Felix</string>
     <string name="about_us_colaboration">Colaboracion con"</string>
     <string name="close_button">Boton de cierre</string>
-    <string name="pausar_juego">Boton de pausa</string>
-    <string name="abrir_configuracion">Abrir configuración</string>
-    <string name="tiempo_game">Tiempo</string>
-    <string name="facil_game">Facil</string>
-    <string name="errores_game">Errores</string>
-    <string name="cantidad_errores">0/8</string>
-    <string name="puntaje_game">Puntaje</string>
-    <string name="value_puntaje_game">0</string>
-    <string name="pista_game">Pista</string>
-    <string name="imagen_de_un_caballo">Imagen de un caballo</string>
-    <string name="imagen_de_una_jinete">Imagen de una jinete</string>
-    <string name="imagen_de_una_mesa">Imagen de una mesa</string>
-    <string name="masculino">Masculino</string>
-    <string name="femenino">Femenino</string>
-    <string name="juego_pausado">Juego Pausado</string>
-    <string name="reanudar">Reanudar</string>
-    <string name="femenine_voice">Femenina</string>
-    <string name="masculine_voice">Masculina</string>
+    <string name="pause_game">Boton de pausa</string>
+    <string name="open_configuration">Abrir configuración</string>
+    <string name="game_time">Tiempo</string>
+    <string name="example_difficulty_game">Facil</string>
+    <string name="errors_game">Errores</string>
+    <string name="errors_quantity">0/24</string>
+    <string name="game_score">Puntaje</string>
+    <string name="score_game_example">0</string>
+    <string name="game_clue">Pista</string>
+    <string name="horse_image">Imagen de un caballo</string>
+    <string name="horse_rider_image">Imagen de una jinete</string>
+    <string name="table_image">Imagen de una mesa</string>
+    <string name="paused_game">Juego Pausado</string>
+    <string name="resume">Reanudar</string>
     <string name="confirm_button">Confirmar</string>
+    <string name="music_volume">Volumen de la música</string>
+    <string name="voice_volume">Volumen de voces</string>
+    <string name="game_volume">Volumen del Juego</string>
+    <string name="you_won">Has Ganado!</string>
+    <string name="lost_errors">Has perdido por demasiados errores. :(</string>
+    <string name="time_left">Tiempo restante: 00:00</string>
+    <string name="errors">Errores: 0/24</string>
+    <string name="difficulty_text">Dificultad: Facil</string>
+    <string name="points">Puntos: 150</string>
+    <string name="progress">Progreso: 100%</string>
+    <string name="close">Cerrar</string>
+    <string name="time_left_game">00:00</string>
+    <string name="hard_scraper">Rasqueta dura.</string>
+    <string name="soft_scraper">Rasqueta blanda.</string>
+    <string name="hoof_pick">Escarba-vasos.</string>
+    <string name="soft_brush">Cepillo blando.</string>
+    <string name="hard_brush">Cepillo duro.</string>
+    <string name="back_to_menu">Volver al Menu</string>
+    <string name="reboot">Reiniciar</string>
+    <string name="avatar">avatar</string>
 </resources>
