- Agrego boton cancelar en ambos registros. - Modularizo mejor las cosas. - Añado la funcionalidad para modificar perfiles de pacientes y terapeutas.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,6 @@
     <string name="avatar">Avatar</string>
     <string name="histories">Historiales</string>
     <string name="pacients">Pacientes</string>
+    <string name="deleteAccount">Eliminar perfil</string>
+    <string name="cancel">Cancelar</string>
 </resources>
