Paso strings a la carpeta correspondiente

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,33 @@
     <string name="deleteAccount">Eliminar perfil</string>
     <string name="cancel">Cancelar</string>
     <string name="back_button">Boton de volver</string>
-    <string name="name_title_add">- Nombre</string>
-    <string name="surname_title_add">- Appellido</string>
+    <string name="name_hyphen">- Nombre</string>
+    <string name="surname_hyphen">- Apellido</string>
+    <string name="asterisk">*</string>
+    <string name="easy_difficulty">Fácil</string>
+    <string name="medium_difficulty">Medio</string>
+    <string name="hard_difficulty">Difícil</string>
+    <string name="voice_hyphen">- Voz</string>
+    <string name="masculine">Masculina</string>
+    <string name="feminine">Femenina</string>
+    <string name="clues_hyphen">- Pistas</string>
+    <string name="yes_text">Sí</string>
+    <string name="no_text">No</string>
+    <string name="delete_user">Eliminar a USER</string>
+    <string name="delete_user_info_text">¿Estas seguro que quieres eliminar el perfil de USER? Se borraran todos sus datos de forma permanente.</string>
+    <string name="age_hyphen">- Edad</string>
+    <string name="age">Edad</string>
+    <string name="observations_hyphen">- Observaciones</string>
+    <string name="observations">Observaciones</string>
+    <string name="genre_hyphen">- Genero</string>
+    <string name="male">Hombre</string>
+    <string name="female">Mujer</string>
+    <string name="name">Nombre</string>
+    <string name="surname">Apellido</string>
+    <string name="avatar_hyphen">- Avatar</string>
+    <string name="avatar_1">Avatar 1</string>
+    <string name="avatar_2">Avatar 2</string>
+    <string name="avatar_3">Avatar 3</string>
+    <string name="avatar_4">Avatar 4</string>
+    <string name="avatar_5">Avatar 5</string>
 </resources>
