Agregado pagina de Seleccion de Historiales y muestra de los mismos. Cambios dentro de la base da datos para substraer los datos y ademas guardar nueva informacion (Fecha)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,5 @@
     <string name="avatar_3">Avatar 3</string>
     <string name="avatar_4">Avatar 4</string>
     <string name="avatar_5">Avatar 5</string>
+    <string name="history_button">Historial</string>
 </resources>
